# smartmeter-openthread

./: .clang-format  Kconfig  README.md  west.yml
.github/workflows/: smartmeter2mqtt-release.yml
apps/: debug.conf
apps/co2sensor/: CMakeLists.txt  prj.conf
apps/co2sensor/boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/co2sensor/src/: bluetooth.c  main.c  main.h  uart.c
apps/coprocessor/: CMakeLists.txt  prj.conf
apps/coprocessor/boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/coprocessor/src/: main.c
apps/pms5003/: CMakeLists.txt  Kconfig  prj.conf
apps/pms5003/boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/pms5003/src/: main.c
apps/powermeter/: CMakeLists.txt  Kconfig  debug.conf  prj.conf
apps/powermeter/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
apps/powermeter/src/: main.c  main.h  uart.c
apps/receive/: CMakeLists.txt  Kconfig  prj.conf
apps/receive/boards/: b_l072z_lrwan1.overlay
apps/receive/src/: main.c
apps/receive_bt2wifi/: CMakeLists.txt  prj.conf
apps/receive_bt2wifi/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/receive_bt2wifi/src/: api.c  main.c  main.h
apps/router/: CMakeLists.txt  prj.conf
apps/router/src/: main.c
apps/send/: CMakeLists.txt  Kconfig  prj.conf
apps/send/boards/: b_l072z_lrwan1.conf  b_l072z_lrwan1.overlay  heltec_lora_node_151.conf  heltec_lora_node_151.overlay  nrf52840_powermeter.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
apps/send/src/: bluetooth.c  lora.c  lorahack.c  lorahack.h  main.c  main.h  uart.c
boards/arm/heltec_lora_node_151/: Kconfig.board  (+4 more)
container/: Containerfile.mcumgr  Containerfile.nrfutil
modules/: CMakeLists.txt  Kconfig
modules/mqttsndev/: CMakeLists.txt  Kconfig  lib.c  private.h  settings.c
modules/rust/: CMakeLists.txt  Cargo.toml  Kconfig
modules/rust/io/: Cargo.toml
modules/rust/io/src/: lib.rs
modules/rust/smartmeter/: Cargo.toml  cbindgen.toml
modules/rust/smartmeter/src/: capi.rs  lib.rs  logger.rs  waker.rs
modules/rust/sml/: Cargo.toml  build.rs
modules/rust/sml/specification/: README.md
modules/rust/sml/src/: error.rs  frame.rs  lib.rs  macros.rs  message.rs  tlv.rs
modules/rust/sml/templates/: messages.rs
modules/temprng/: CMakeLists.txt  Kconfig  temprng.c
scripts/: mcumgr  nrfutil
snippets/rtt-shell/: rtt-shell.conf
snippets/smartmeter-nrf52dk-nouart/: smartmeter-nrf52dk-nouart.overlay  snippet.yml
snippets/smartmeter-nrf52dongle-nouart/: snippet.yml
snippets/smartmeter-thread-device/: smartmeter-thread-device.conf  snippet.yml
tools/lora2mqtt/: Cargo.toml  Dockerfile.cross
tools/lora2mqtt/src/: main.rs
tools/smartmeter2mqtt/: .gitignore  Cargo.toml  Containerfile
tools/smartmeter2mqtt/src/: main.rs
(+17 files in other folders)
