[package]
name = "lora2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chacha20poly1305 = "0.9"
clap = { version = "3.2", features = ["derive"] }
cobs = "0.2"
env_logger = "0.9"
log = "0.4"
paho-mqtt = { version = "0.11", default_features = false, features = ["bundled"] }
serialport = "4.2"
