[package]
name = "smartmeter2mqtt"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
chacha20poly1305 = "0.10"
macaddr = { version = "1.0", features = ["serde"] }
num-derive = "0.3"
num-traits = "0.2"
rumqttc = "0.21"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["fs", "macros", "net", "rt", "sync"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
